package fr.univparis.azul.tile;
public class FirstTile extends SpecialTile {
  public void effect() {}
}
